cm4all-beng-proxy (0.7.3) unstable; urgency=low

  * uri-verify: don't reject double slash after first segment
  * processor: allow processing without session
  * request: disable session management for known bots
  * python: fixed AttributeError in __getattr__()
  * python: added method Response.process()

 --

cm4all-beng-proxy (0.7.2) unstable; urgency=low

  * fcache: close all caching connections on exit
  * istream-file: retry reading after EAGAIN
  * direct, istream-pipe: re-enable SPLICE_F_NONBLOCK
  * direct, istream-pipe: disable the SPLICE_F_MORE flag
  * http-client: handle EAGAIN after splice
  * http-client, header-writer: remove hop-by-hop response headers
  * response: optimized transformed response headers
  * handler: mangle CGI and FastCGI headers
  * header-forward: generate the X-Forwarded-For header
  * header-forward: add local host name to "Via" request header

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Oct 2009 13:41:02 +0100

cm4all-beng-proxy (0.7.1) unstable; urgency=low

  * file-handler: close the stream on "304 Not Modified"
  * pool: use assembler code only on gcc
  * cmdline: added option "--set tcp_stock_limit"
  * Makefile.am: enable the "subdir-objects" option

 -- Max Kellermann <mk@cm4all.com>  Thu, 22 Oct 2009 12:17:11 +0200

cm4all-beng-proxy (0.7) unstable; urgency=low

  * ajp-client: check if connection was closed during response callback
  * header-forward: log session id
  * istream: separate TCP splicing checks
  * istream-pipe: fix segmentation fault after incomplete direct transfer
  * istream-pipe: implement the "available" method
  * istream-pipe: allocate pipe only if handler supports it
  * istream-pipe: flush the pipe before reading from input
  * istream-pipe: reuse pipes in a stock
  * direct: support splice() from TCP socket to pipe
  * istream: direct() returns -3 if stream has been closed
  * hstock: don't destroy stocks while items are being created